overflow correct

--- a/styles/problem_styles.css
+++ b/styles/problem_styles.css
@@ -24,6 +24,7 @@
 	align-items: center;
 	gap: 1rem;
 	height: calc(100% - 60px);
+	overflow: auto;
 }
 
 .users-container{
